--- a/store/templates/myArea.html
+++ b/store/templates/myArea.html
@@ -14,47 +14,52 @@
                     <div class="ui segment">
                         <div class="row">
                             <div class="ui grid">
-                                {% for b in books %}
-                                <div class="four wide column">
-                                    <div class="ui  card">
-                                        <div class="image">
+                                            {% for b in books %}
+
+                                <div class="three wide column">
+                                    <div class="ui card">
+                                        <div class="image" style="text-align: center;">
                                             <img src="{{ b.cover.url }}">
+                                            <a href="/store/book/{{ b.id }}"><h4 >{{b.title}}</h4></a>
                                         </div>
                                         <div class="extra">
 
                                             Rating:
-                                            <div class="ui star rating" data-rating="5"></div>
-
+                                            <div id="{{ b.id }}" class="ui star rating"
+                                                 data-rating="{{ b.r.rate }}"></div>
+                                            rated :{{ b.avg.rate__avg }} count {{ b.count }}
                                         </div>
 
-                                        <div class="ui dropdown item">
-                                            <i class="dropdown icon"></i>
-                                            {% if b.s %}
+                                        <div class="ui compact menu">
+                                            <div class="ui simple dropdown item">
+                                                {% if b.s %}
 
-                                            <a href="/store/book/{{ b.id }}/{{ b.s.statues }}">
-                                                {% if b.s.statues == "0" %}
-                                                Read
-                                                {% elif b.s.statues == "1" %}
-                                                Currently Reading
+                                                <a class="statue_{{ b.id }}">
+                                                    {% if b.s.statues == "0" %}
+                                                    Read
+                                                    {% elif b.s.statues == "1" %}
+                                                    Currently Reading
+                                                    {% else %}
+                                                    Want to Read
+                                                    {% endif %}
+                                                </a>
                                                 {% else %}
-                                                Want to Read
+                                                <a class="statue_{{ b.id }}" href="/store/book/{{ b.id }}/2">Want to
+                                                    Read</a>
                                                 {% endif %}
-                                            </a>
-                                            {% else %}
-                                            <a href="/store/book/{{ b.id }}/2">Want to Read</a>
-                                            {% endif %}
-
-                                            <div class="menu">
-                                                <div class="header">Do it</div>
-                                                <a class="item" href="/store/book/{{ b.id }}/{{ 0 }}">Read</a>
-                                                <a class="item" href="/store/book/{{ b.id }}/{{ 1 }}">Currently
-                                                    Reading</a>
-                                                <a class="item" href="/store/book/{{ b.id }}/{{ 2 }}">Want to Read</a>
+                                                <i class="dropdown icon"></i>
+                                                <div id="statues_menu" class="menu">
+                                                    <a class="item" onclick="changeState({{ b.id }},0)">Read</a>
+                                                    <a class="item" onclick="changeState({{ b.id }},1)">Currently
+                                                        Reading</a>
+                                                    <a class="item" onclick="changeState({{ b.id }},2)">Want to Read</a>
+                                                </div>
                                             </div>
                                         </div>
+
                                     </div>
                                 </div>
-                                {% empty %}
+
                                 No Books in the List
                                 {% endfor %}
                             </div>
